--- a/projects/project1/scripts/project1.ipynb
+++ b/projects/project1/scripts/project1.ipynb
@@ -18,13 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import files to use in preprocessing and machine learning\n",
     "from implementations import *\n",
-    "from proj1_helpers import *"
+    "from proj1_helpers import *\n",
+    "from preprocess import *\n",
+    "from cross_validation import *"
    ]
   },
   {
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +156,7 @@
     "for col in range(tX.shape[1]):\n",
     "    tX_T = np.transpose(tX)\n",
     "    \n",
-    "    null = (tx_T[col] == -999)\n",
+    "    null = (tX_T[col] == -999)\n",
     "    null_s = np.logical_and(y >= 0, null)\n",
     "    null_b = np.logical_and(y < 0, null)\n",
     "    \n",
@@ -182,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -247,6 +249,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(99913, 18)\n",
+      "(77544, 22)\n",
+      "(72543, 29)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Split the database based on 'PRI_jet_num' (0, 1, 2&3)\n",
+    "tX_jet_0, tX_jet_1, tX_jet_23, y_jet_0, y_jet_1, y_jet_23, r_ids = split_reformat_data(tX, y, ids)\n",
+    "\n",
+    "print(tX_jet_0.shape)\n",
+    "print(tX_jet_1.shape)\n",
+    "print(tX_jet_23.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replacing the missing values of first feature column with median\n",
+    "replace_missing_value(tX_jet_0, 0, 'median')\n",
+    "replace_missing_value(tX_jet_1, 0, 'median')\n",
+    "replace_missing_value(tX_jet_23, 0, 'median')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Standardize the splitted training data\n",
+    "tx_0 = standardize(tX_jet_0)\n",
+    "tx_1 = standardize(tX_jet_1)\n",
+    "tx_23 = standardize(tX_jet_23)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Least Squares"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -256,7 +320,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train models for different Algorithms"
+    "## Ridge Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set H-parameters\n",
+    "K_FOLD = 10\n",
+    "DEGREE = np.arange(2, 11)\n",
+    "SEED = 5\n",
+    "LAMBDA = np.logspace(-8, -6, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_optimal(degrees, k_fold, lambdas, seed=1):\n",
+    "    # Split the data into k-fold\n",
+    "    k_indices = build_k_indices(y, k_fold, seed)\n",
+    "    \n",
+    "    # Set lists for collecting best lambda & rmse for each degree\n",
+    "    best_lambda = []\n",
+    "    best_rmse = []\n",
+    "    \n",
+    "    for degree in degrees:\n",
+    "        rmse_val = []\n",
+    "        \n",
+    "        for lambda_ in lambdas:\n",
+    "            rmse_val_lambda_ = []\n",
+    "            \n",
+    "            for k in range(k_fold):\n",
+    "                _, loss_val, w = cross_validation(y, x, k_indices, k, lambda_, degree)\n",
+    "                rmse_val_lambda_.append(loss_val)\n",
+    "\n",
+    "            rmse_val.append(np.mean(rmse_val_lambda_))\n",
+    "        \n",
+    "        index_opt_lambda = np.argmin(rmse_val)\n",
+    "        best_lambda.append(lambdas[index_opt_lambda])\n",
+    "        best_rmse.append(rmse_val[index_opt_lambda])\n",
+    "    \n",
+    "    opt_degree = degrees[np.argmin(best_rmse)]\n",
+    "    opt_lambda = best_lambda[np.argmin(best_rmse)]\n",
+    "    \n",
+    "    return opt_degree, opt_lambda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the "
    ]
   },
   {
@@ -265,6 +387,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression"
+   ]
   },
   {
    "cell_type": "code",
@@ -291,7 +420,7 @@
    },
    "outputs": [],
    "source": [
-    "DATA_TEST_PATH = '' # TODO: download train data and supply path here \n",
+    "DATA_TEST_PATH = 'data_aicrowd/test.csv' # TODO: download train data and supply path here \n",
     "_, tX_test, ids_test = load_csv_data(DATA_TEST_PATH)"
    ]
   },
@@ -306,7 +435,7 @@
    },
    "outputs": [],
    "source": [
-    "OUTPUT_PATH = '' # TODO: fill in desired name of output file for submission\n",
+    "OUTPUT_PATH = 'data_aicrowd/pred.csv' # TODO: fill in desired name of output file for submission\n",
     "y_pred = predict_labels(weights, tX_test)\n",
     "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)"
    ]
