--- a/projects/project1/scripts/project1.ipynb
+++ b/projects/project1/scripts/project1.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 143,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Useful starting lines\n",
     "%matplotlib inline\n",
@@ -18,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -48,13 +57,13 @@
    "outputs": [],
    "source": [
     "# Download train data and supply path here \n",
-    "DATA_TRAIN_PATH = 'data_aicrowd/train.csv' \n",
+    "DATA_TRAIN_PATH = '../data/train.csv' \n",
     "y, tX, ids = load_csv_data(DATA_TRAIN_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,24 +334,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set H-parameters\n",
     "K_FOLD = 10\n",
-    "DEGREE = np.arange(2, 11)\n",
+    "DEGREE = np.arange(1, 8)\n",
     "SEED = 5\n",
-    "LAMBDA = np.logspace(-8, -6, 20)"
+    "LAMBDA = np.logspace(-6, -2, 30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_optimal(degrees, k_fold, lambdas, seed=1):\n",
+    "def find_optimal(x, y, degrees, k_fold, lambdas, seed=1):\n",
     "    # Split the data into k-fold\n",
     "    k_indices = build_k_indices(y, k_fold, seed)\n",
     "    \n",
@@ -359,6 +368,11 @@
     "            for k in range(k_fold):\n",
     "                _, loss_val, w = cross_validation(y, x, k_indices, k, lambda_, degree)\n",
     "                rmse_val_lambda_.append(loss_val)\n",
+    "                \n",
+    "            print(\"lambda {}\".format(lambda_))\n",
+    "            print(\"loss {}\".format(np.mean(rmse_val_lambda_)))\n",
+    "            print(\"degree {}\".format(degree))\n",
+    "            print(\"\\n\\n\")\n",
     "\n",
     "            rmse_val.append(np.mean(rmse_val_lambda_))\n",
     "        \n",
@@ -374,19 +388,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find the "
+    "opt_d, opt_l = find_optimal(tx_1, y_jet_1, DEGREE, K_FOLD, LAMBDA)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opt_d\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -397,10 +424,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0005736152510448681"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opt_l"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "111\n"
+     ]
+    }
+   ],
+   "source": [
+    "poly_tx_te = build_poly(tx_1, opt_d)\n",
+    "\n",
+    "\n",
+    "print(poly_tx_te.shape[1])\n",
+    "\n",
+    "quanzhong, _ = ridge_regression(y_jet_1, poly_tx_te, opt_l)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -411,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 139,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -420,7 +489,7 @@
    },
    "outputs": [],
    "source": [
-    "DATA_TEST_PATH = 'data_aicrowd/test.csv' # TODO: download train data and supply path here \n",
+    "DATA_TEST_PATH = '../data/test.csv' # TODO: download train data and supply path here \n",
     "_, tX_test, ids_test = load_csv_data(DATA_TEST_PATH)"
    ]
   },
@@ -435,20 +504,113 @@
    },
    "outputs": [],
    "source": [
-    "OUTPUT_PATH = 'data_aicrowd/pred.csv' # TODO: fill in desired name of output file for submission\n",
-    "y_pred = predict_labels(weights, tX_test)\n",
-    "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)"
+    "# OUTPUT_PATH = 'data/pred.csv' # TODO: fill in desired name of output file for submission\n",
+    "# y_pred = predict_labels(weights, tX_test)\n",
+    "# create_csv_submission(ids_test, y_pred, OUTPUT_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(227458, 18)\n",
+      "(175338, 22)\n",
+      "(165442, 29)\n"
+     ]
+    }
+   ],
+   "source": [
+    "t0, t1, t23, t_ids = split_reformat_test(tX_test, ids_test)\n",
+    "\n",
+    "\n",
+    "print(t0.shape)\n",
+    "print(t1.shape)\n",
+    "print(t23.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "111"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(quanzhong)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "poly_t1 = build_poly(t1, opt_d)\n",
+    "\n",
+    "\n",
+    "p = predict_labels(quanzhong, poly_t1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1306904378970902"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(p[p == 1]) / len(p) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.35734550706695556"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(y_jet_1[y_jet_1 == 1]) / len(y_jet_1) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -470,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
