--- a/projects/project1/scripts/project1.ipynb
+++ b/projects/project1/scripts/project1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Logistic Regression (GD)"
+    "### Logistic Regression (SGD)"
    ]
   },
   {
@@ -634,7 +634,21 @@
     "# Set H-parameters\n",
     "MAX_ITERS_LOGIC = 500\n",
     "THRESHOLD_LOGIC = 1e-8\n",
-    "GAMMA_LOGIC = 0.005"
+    "GAMMA_LOGIC = 0.005\n",
+    "BATCH_SIZE = 128"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reshape label y to 2D-array\n",
+    "Y_LOGIC = []\n",
+    "\n",
+    "for i in range(len(Y)):\n",
+    "    Y_LOGIC.append(np.array(Y[i]).reshape(-1, 1)) "
    ]
   },
   {
@@ -647,8 +661,8 @@
     "#LOSS_LOGIC = []\n",
     "\n",
     "INITIAL_W = np.zeros((TX[0].shape[1]+1, 1))\n",
-    "w_rlogic_0, loss_rlogic_0 = logistic_regression(Y[0], TX[0], INITIAL_W, MAX_ITERS_LOGIC,\n",
-    "                                                GAMMA_LOGIC, THRESHOLD_LOGIC)"
+    "w_rlogic_0, loss_rlogic_0 = logistic_regression(Y_LOGIC[0], TX[0], INITIAL_W, MAX_ITERS_LOGIC,\n",
+    "                                                GAMMA_LOGIC, THRESHOLD_LOGIC, BATCH_SIZE)"
    ]
   },
   {
@@ -658,8 +672,8 @@
    "outputs": [],
    "source": [
     "INITIAL_W = np.zeros((TX[1].shape[1]+1, 1))\n",
-    "w_rlogic_1, loss_rlogic_1 = logistic_regression(Y[1], TX[1], INITIAL_W, MAX_ITERS_LOGIC,\n",
-    "                                                GAMMA_LOGIC, THRESHOLD_LOGIC)"
+    "w_rlogic_1, loss_rlogic_1 = logistic_regression(Y_LOGIC[1], TX[1], INITIAL_W, MAX_ITERS_LOGIC,\n",
+    "                                                GAMMA_LOGIC, THRESHOLD_LOGIC, BATCH_SIZE)"
    ]
   },
   {
@@ -669,8 +683,8 @@
    "outputs": [],
    "source": [
     "INITIAL_W = np.zeros((TX[2].shape[1]+1, 1))\n",
-    "w_rlogic_2, loss_rlogic_2 = logistic_regression(Y[2], TX[2], INITIAL_W, MAX_ITERS_LOGIC,\n",
-    "                                                GAMMA_LOGIC, THRESHOLD_LOGIC)"
+    "w_rlogic_2, loss_rlogic_2 = logistic_regression(Y_LOGIC[2], TX[2], INITIAL_W, MAX_ITERS_LOGIC,\n",
+    "                                                GAMMA_LOGIC, THRESHOLD_LOGIC, BATCH_SIZE)"
    ]
   },
   {
@@ -689,7 +703,8 @@
     "# Set H-parameters\n",
     "MAX_ITERS_RLOGIC = 1000\n",
     "THRESHOLD_RLOGIC = 1e-8\n",
-    "GAMMA_RLOGIC = 0.01"
+    "GAMMA_RLOGIC = 0.01\n",
+    "BATCH_SIZE = 128"
    ]
   },
   {
@@ -698,11 +713,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "INITIAL_W = np.zeros((TX[i].shape[1], 1))\n",
-    "w_rlogic, loss_rlogic = reg_logistic_regression(Y[i], TX[i], INITIAL_W, MAX_ITERS_RLOGIC,\n",
-    "                                                GAMMA_RLOGIC, THRESHOLD_RLOGIC)\n",
+    "# Reshape label y to 2D-array\n",
+    "Y_REG_LOGIC = []\n",
+    "\n",
+    "for i in range(len(Y)):\n",
+    "    Y_REG_LOGIC.append(np.array(Y[i]).reshape(-1, 1)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fine-tuning each splitted dataset\n",
+    "INITIAL_W = np.zeros((TX[0].shape[1], 1))\n",
+    "w_rlogic, loss_rlogic = reg_logistic_regression(Y_REG_LOGIC[0], TX[0], INITIAL_W, MAX_ITERS_RLOGIC,\n",
+    "                                                GAMMA_RLOGIC, THRESHOLD_RLOGIC, BATCH_SIZE)\n",
     "    \n",
-    "print('Loss of tx_{}:'.format(i), 'iterations:{}\\n'.format(MAX_ITERS_RLOGIC))\n",
+    "WEIGHT_RLOGIC.append(w)\n",
+    "LOSS_RLOGIC.append(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INITIAL_W = np.zeros((TX[1].shape[1], 1))\n",
+    "w_rlogic, loss_rlogic = reg_logistic_regression(Y_REG_LOGIC[1], TX[1], INITIAL_W, MAX_ITERS_RLOGIC,\n",
+    "                                                GAMMA_RLOGIC, THRESHOLD_RLOGIC, BATCH_SIZE)\n",
+    "    \n",
+    "WEIGHT_RLOGIC.append(w)\n",
+    "LOSS_RLOGIC.append(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INITIAL_W = np.zeros((TX[2].shape[1], 1))\n",
+    "w_rlogic, loss_rlogic = reg_logistic_regression(Y_REG_LOGIC[2], TX[2], INITIAL_W, MAX_ITERS_RLOGIC,\n",
+    "                                                GAMMA_RLOGIC, THRESHOLD_RLOGIC, BATCH_SIZE)\n",
+    "    \n",
     "WEIGHT_RLOGIC.append(w)\n",
     "LOSS_RLOGIC.append(loss)"
    ]
