--- a/projects/project1/scripts/project1.ipynb
+++ b/projects/project1/scripts/project1.ipynb
@@ -187,6 +187,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "METHOD = 'k_means'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -201,7 +210,7 @@
     }
    ],
    "source": [
-    "TX, Y, r_ids = data_preprocess(tX, y, ids, replacing='lr', mode='std_norm')\n",
+    "TX, Y, r_ids = data_preprocess(tX, y, ids, replacing=METHOD, mode='std_norm')\n",
     "\n",
     "print(TX[0].shape)\n",
     "print(TX[1].shape)\n",
@@ -585,7 +594,52 @@
     "K_FOLD = 10\n",
     "DEGREE = np.arange(1, 7)\n",
     "SEED = 5\n",
-    "LAMBDA = np.logspace(-6, -3, 30)"
+    "LAMBDA = np.logspace(-6, -3, 30)\n",
+    "K_CLUSTER = np.arange(1,11)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'TX' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_6247/692167114.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mLOSS_RIDGE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mbest_deg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbest_lambda\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_optimal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDEGREE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK_FOLD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mLAMBDA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSEED\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'The best degree of tx_{}:'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbest_deg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'with lambda:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbest_lambda\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'TX' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Find an optimal set of polynomial expansion degree and learning rate (lambda)\n",
+    "# Then calculate the corresponding weight and loss (rmse)\n",
+    "# (based on the H-parameters set above, for each splitted training set)\n",
+    "DEGREE_RIDGE = []\n",
+    "LAMBDA_RIDGE = []\n",
+    "K_CLUSTER_RIDGE = []\n",
+    "\n",
+    "if METHOD == 'k_means':\n",
+    "    for i in range(len(TX)):\n",
+    "        best_deg, best_lambda, best_k = find_optimal_KMC(Y[i], TX[i], DEGREE, \n",
+    "                                                         K_FOLD, LAMBDA, K_CLUSTER, SEED)\n",
+    "        print('The best degree of tx_{}:'.format(i), best_deg, 'with lambda:', best_lambda)\n",
+    "        \n",
+    "        DEGREE_RIDGE.append(best_deg)\n",
+    "        LAMBDA_RIDGE.append(best_lambda)\n",
+    "        K_CLUSTER_RIDGE.append(best_k)\n",
+    "             \n",
+    "else:\n",
+    "    for i in range(len(TX)):\n",
+    "        best_deg, best_lambda = find_optimal(Y[i], TX[i], DEGREE, K_FOLD, LAMBDA, SEED)\n",
+    "        print('The best degree of tx_{}:'.format(i), best_deg, 'with lambda:', best_lambda)\n",
+    "        \n",
+    "        DEGREE_RIDGE.append(best_deg)\n",
+    "        LAMBDA_RIDGE.append(best_lambda)"
    ]
   },
   {
@@ -594,21 +648,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find an optimal set of polynomial expansion degree and learning rate (lambda)\n",
-    "# Then calculate the corresponding weight and loss (rmse)\n",
-    "# (based on the H-parameters set above, for each splitted training set)\n",
-    "WEIGHT_RIDGE = []\n",
-    "LOSS_RIDGE = []\n",
-    "\n",
-    "for i in range(len(TX)):\n",
-    "    best_deg, best_lambda = find_optimal(Y[i], TX[i], DEGREE, K_FOLD, LAMBDA, SEED)\n",
-    "    print('The best degree of tx_{}:'.format(i), best_deg, 'with lambda:', best_lambda)\n",
-    "    \n",
+    "for i in range(len(TX)):  \n",
     "    poly_tx = build_poly(TX[i], best_deg)\n",
-    "    w, loss = ridge_regression(Y[i], poly_tx, best_lambda)\n",
-    "    \n",
-    "    WEIGHT.append(w)\n",
-    "    LOSS_RIDGE.append(loss)"
+    "    w, loss = ridge_regression(Y[i], poly_tx, best_lambda)"
    ]
   },
   {
