--- a/projects/project1/scripts/run.ipynb
+++ b/projects/project1/scripts/run.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5b6459be-3eee-4c2f-a970-1404d48872b6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Useful starting lines\n",
     "%matplotlib inline\n",
@@ -27,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0c9765d9-7553-463b-82a9-2d9647a2ad98",
    "metadata": {},
    "outputs": [],
@@ -43,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "7d723975-d741-4a46-a720-d3708d39e514",
    "metadata": {},
    "outputs": [],
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "658fc002-e3d2-4c4c-ab82-7e776b1f1141",
    "metadata": {},
    "outputs": [],
@@ -69,12 +60,14 @@
     "DEGREE_jet_0 = np.arange(2, 4)\n",
     "K_CLUSTERS = np.arange(1, 10)\n",
     "SEED = 5\n",
-    "LAMBDA = np.logspace(-6, -2, 40)"
+    "LAMBDA = np.logspace(-6, -2, 40)\n",
+    "METHOD = 'k_means'\n",
+    "MODE = 'std'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "641929e7-f475-4e16-abe0-e4b4f2977dce",
    "metadata": {},
    "outputs": [],
@@ -84,22 +77,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "7ec43c09-e733-4da1-869c-8b6ba8e1ccb5",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'DEGREE1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/0m/zxq3kg3515dgv1fvq2yrlzdw0000gn/T/ipykernel_77683/614953457.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mopt_d\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopt_l\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopt_k\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_optimal_KMC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDEGREE_jet_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK_FOLD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mLAMBDA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK_CLUSTERS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mopt_d\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopt_l\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopt_k\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_optimal_KMC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDEGREE1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK_FOLD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mLAMBDA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK_CLUSTERS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mls_opt_degree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopt_d\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'DEGREE1' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ls_opt_degree = []\n",
     "ls_opt_lambda = []\n",
@@ -121,126 +102,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "fc44ed76-f250-44b3-9ff0-70cdc9effcfc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ls_opt_degree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "dc3de258-631a-4508-829f-9122fc31e66f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.0007443803013251688]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ls_opt_lambda"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "58edbbe4-8d4a-43a9-b26d-3402d2cc8e02",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ls_opt_k"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "874b1d41-3a8f-430b-bc92-e979c9c16b9d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 6, 5, 5]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ls_opt_degree"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "43f5483f-5950-4ff2-83ac-561ac9d9e85c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.0007443803013251688, 1e-06, 0.01, 1e-06]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ls_opt_lambda"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "99a56bc8-1953-4654-8623-26877f508d7e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 1, 1, 1]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ls_opt_k"
    ]
@@ -248,10 +133,100 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e3ef210-7bea-4880-a580-318a327fc09d",
+   "id": "874b1d41-3a8f-430b-bc92-e979c9c16b9d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ls_opt_degree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43f5483f-5950-4ff2-83ac-561ac9d9e85c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls_opt_lambda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99a56bc8-1953-4654-8623-26877f508d7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls_opt_k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ceca114-ef14-4a2c-86e5-00c369b40282",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls_opt_kkkkk = [16, 2, 2, 8]\n",
+    "ls_opt_ddddd = [2, 6, 6, 5]\n",
+    "ls_opt_lllll = [1e-06, 0.01, 0.0011937766417144358, 0.0019144819761699576]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b2fe418-a8ae-451a-b1be-7c55408e1bbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if METHOD == 'k_means':\n",
+    "    TX, Y, r_ids = data_preprocess(tX, y, ids, k_list = ls_opt_k, replacing=METHOD, mode=MODE)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a42d4044-34c2-4c2b-bba8-018afcd27f5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights = generate_weights(TX, Y, ls_opt_degree, ls_opt_lambda, ls_opt_k, r_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f36cd34-2542-4d31-948e-d6fa87923a86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = data_pred(TX, weights, r_ids, True, ls_opt_degree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcdf6b4b-04f4-4693-b308-3a40bee7ae28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metric_pred(y_pred, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "862f3569-12f9-464e-893e-0735bce17610",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_TRAIN_PATH = '../data/test.csv' \n",
+    "test_y, test_tX, test_ids = load_csv_data(DATA_TRAIN_PATH)\n",
+    "test_tX, _, test_ids_pre = data_preprocess(test_tX, test_y, test_ids, k_list = ls_opt_k, replacing=METHOD, mode='std')\n",
+    "test_pred = data_pred(test_tX, weights, test_ids_pre, True, ls_opt_degree)\n",
+    "OUTPUT_PATH = 'data/pred.csv'\n",
+    "create_csv_submission(test_ids, test_pred, OUTPUT_PATH)"
+   ]
   }
  ],
  "metadata": {
